
This file shows the changes in recent releases of MODx. The most current release is usually the 
development release, and is only shown to give an idea of what's currently in the pipeline.


MODx 0.9.5 RC1 (rev 1869 - Nov 2, 2006)
====================================
* Language file update to QuickEdit. (1865)
* [FS#611] Minor change to header location to prevent double-login that is affecting some server configs (doesn't have any adverse effect for configs not experiencing this problem). (1862)
* [FS#299] getUserLoginID() now returns manager user ID if a manager user is logged in the frontend. (1860)
* getLoginUserID() will allow the manager user language setting to override the main language setting if required. (1860)
* Fix reference to a non-existant event in getSettings(): 'OnBeforeManagerInit' - changed to 'OnBeforeManagerPageInit'. (1860)
* Modify OnBeforeManagerPageInit event to only run if manager user is logged into the backend. (1860)
* [FS#621] Minor corrections to MODx light theme (1868)
* Major cleanup of style.php files, tree.php and nodes.php (1866)
* Added new HTML Entities output widget for TVs (1858)
* Update eForm to 1.4.1
* Clarify File Manager vs. Resource Browser manager config options (1853)
* [FS#626] Fix the mysterious missing login button in IE6. (also fixes image paths in CSS). (1851)
* [FS#583] Separate out the list of countries into a lang file (defaults to English if no other language file is available). (1849)
* [FS#617] Truncate active_users table to clear locks on manager functions during upgrades. (1822)
* [FS#620] Adjusted styles to add scrollbars to message area if complete message can not be displayed. (1840)
* [FS#620] Made the system alert box variable width so it will always fit within the boundaries of the frame. (1840)
* [FS#620] Moved embedded CSS styles into a sysalert_style.php file in the theme directories. (1840)