@@ -123,7 +123,7 @@ $_lang["confirm_delete_tags"] = 'Are you sure you want to delete the selected ME
 $_lang["confirm_delete_template"] = 'Are you sure you want to delete this template?';
 $_lang["confirm_delete_tmplvars"] = 'Are you sure you want to remove this variable and all stored values?';
 $_lang["confirm_delete_user"] = 'Are you sure you want to delete this user?';
-$_lang["confirm_duplicate_document"] = 'Are you sure you want to duplicate this document/folder?\nSub folders and documents will also be duplicated.';
+$_lang["confirm_duplicate_document"] = 'Are you sure you want to duplicate this document? Any item(s) it contains will also be duplicated.';
 $_lang["confirm_duplicate_record"] = 'Are you sure you want to duplicate this record?';
 $_lang["confirm_empty_trash"] = 'This will permanently remove ALL deleted documents?\n\nProceed?';
 $_lang["confirm_load_depends"] = 'Are you sure you want to load the Manage Dependencies screen without saving your modifications?';
@@ -214,7 +214,7 @@ $_lang["document_opt_show_menu"] = 'Show in menu';
 $_lang["document_opt_show_menu_help"] = 'Select this option to show document inside a web menu. Please note that some Menu Builders might choose to ignore this option.';
 $_lang["document_opt_trackvisit_help"] = 'Log each visitor\'s visit to this page';
 $_lang["document_parent"] = 'Document parent';
-$_lang["document_parent_help"] = 'Click on the above folder icon to enable (or disable) parent selection then click a document in the tree to set it as this document\'s parent.';
+$_lang["document_parent_help"] = 'Click on the icon above to enable (or disable) selecting this document\'s parent. Next, click a document in the tree to set its new parent.';
 $_lang["document_setting"] = 'Document setting';
 $_lang["document_summary"] = 'Summary (introtext)';
 $_lang["document_summary_help"] = 'Type a brief summary of the document';
@@ -507,7 +507,7 @@ $_lang["modx_version"] = "MODx version";
 $_lang["monday"] = 'Monday';
 $_lang["move"] = 'Move';
 $_lang["move_document"] = 'Move document';
-$_lang["move_document_message"] = 'You can move a document and all it\'s children by selecting a new parent in the tree. If you select a document that is not a folder, it will be changed to a folder. Please click on the new parent in the tree.';
+$_lang["move_document_message"] = 'You can move a document and all it\'s children by selecting a new parent in the tree. If you select a document that is not already a container, it will be changed into one. Please click on the new parent in the tree.';
 $_lang["move_document_new_parent"] = 'Please select a new parent in the document tree.';
 $_lang["move_document_title"] = 'Move document';
 $_lang["name"] = 'Name';
@@ -568,7 +568,7 @@ $_lang["page_data_contentType_help"] = 'Select the content type for this documen
 $_lang["page_data_created"] = 'Created';
 $_lang["page_data_edited"] = 'Edited';
 $_lang["page_data_editor"] = 'Edit using rich text editor';
-$_lang["page_data_folder"] = 'Document is folder';
+$_lang["page_data_folder"] = 'Document is container';
 $_lang["page_data_general"] = 'General';
 $_lang["page_data_markup"] = 'Markup/ structure';
 $_lang["page_data_mgr_access"] = 'Manager access';
@@ -868,7 +868,7 @@ $_lang["truncate_table"] = 'Click here to truncate this table';
 $_lang["tuesday"] = 'Tuesday';
 $_lang["tv"] = 'TV';
 $_lang["type"] = 'Type';
-$_lang["udperms_allowroot_message"] = 'Do you want to allow your users to create new documents/ folders in the root of the site? ';
+$_lang["udperms_allowroot_message"] = 'Do you want to allow your users to create new documents in the root of the site? ';
 $_lang["udperms_allowroot_title"] = 'Allow root:';
 $_lang["udperms_message"] = 'Access permissions allow you to specify which pages your users are allowed to edit. You\'ll need to assign your users to user groups, your documents to document groups, and then you\'ll need to specify which user groups are allowed to access which document groups. When you first turn this on, only administrators will be allowed to edit any documents.';
 $_lang["udperms_title"] = 'Use access permissions:';
@@ -927,7 +927,7 @@ $_lang["user_title"] = 'Create/Edit user';
 $_lang["user_upload_message"] = ' If you wish to stop this user uploading any filetypes in this category, make sure that the \'Use Main Configuration Setting\' checkbox is not ticked and leave the field blank.';
 $_lang["user_use_config"] = 'Use System Configuration Setting';
 $_lang["user_zip"] = 'Zip';
-$_lang["use_alias_path_message"] = 'Setting this option to \'yes\' will display the full path to the document if the document has an alias. For example, if a document with an alias called \'child\' is located inside a folder with an alias called \'parent\', then the full alias path to the document will be displayed as \'/parent/child.html\'.<br /><b>NOTE: When setting this option to \'Yes\' (turning on alias paths), you must reference things (such as images, css, javascripts, etc) using the absolute path:  e.g., \'/assets/images\' as oppose to \'assets/images\'. By doing so you will prevent the browser (or web server) from appending the relative path to the alias path.</b>';
+$_lang["use_alias_path_message"] = 'Setting this option to \'yes\' will display the full path to the document if the document has an alias. For example, if a document with an alias called \'child\' is located inside a container document with an alias called \'parent\', then the full alias path to the document will be displayed as \'/parent/child.html\'.<br /><b>NOTE: When setting this option to \'Yes\' (turning on alias paths), reference items (such as images, css, javascripts, etc) using the absolute path: e.g., \'/assets/images\' as oppose to \'assets/images\'. By doing so you will prevent the browser (or web server) from appending the relative path to the alias path.</b>';
 $_lang["use_alias_path_title"] = 'Use friendly alias path:';
 $_lang["use_editor_message"] = 'Do you want to enable the rich text editor? If you\'re more comfortable writing HTML, then you can turn the editor off using this setting. Note that this setting applies to all documents and all users!';
 $_lang["use_editor_title"] = 'Enable editor:';
